[package]
name = "warp-example"
version = "0.1.0"
authors = ["Michael Holmes <michael.holmes@protonmail.ch>"]
edition = "2018"

[dependencies]
warp = "0.1"
mysql_async = { git = "https://github.com/blackbeam/mysql_async", branch = "master"}
futures = "0.1"
tokio = "0.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
slog = "2"
slog-term = "2"
slog-async = "2"
slog-scope = "4"
slog-stdlog = "3"
hyper = "0.12"
hyper-tls = "0.3"
serde = "1"
serde_json = "1"
dotenv = "0.13"
futures-locks = "0.3"
time = "0.1"